# flates

./: .gitignore  LICENSE  README.adoc  flake.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml
asciidoc/: .gitignore  flake.nix
base/: flake.nix
default/: .gitignore  flake.nix
go/: flake.nix  go.mod  gomod2nix.toml  main.go
go-bin/: .gitignore  flake.nix  go.sum  justfile
go-bin/cmd/: cmd_test.go
go-bin/internal/: version.go
go/cmd/: cmd.go  root.go  version.go
go/internal/: internal.go
latex/: flake.nix
presenterm/: flake.nix
python-pkg/: .gitignore  README.md  flake.nix  justfile  pyproject.toml
python-pkg/src/pkg/: __init__.py
python-pkg/tests/: __init__.py  pkg_test.py
python-script/: .gitignore  flake.nix  script.py
ruby/: flake.nix
ruby-script/: .gitignore  .rubocop.yml  Gemfile  flake.nix  gemset.nix  script.rb
rust/: flake.nix
sh/: flake.nix
sh-script/: flake.nix  script.sh
