[project]
name = "pkg"
description = "Package description"
version = "0.0dev0"
authors = [
    {name = "Wibowo Arindrarto", email = "contact@arindrarto.dev"},
]
requires-python = "==3.13.*"
dependencies = []
readme = "README.md"

# [project.urls]
# changelog = ""
# repository = ""
#
# [project.scripts]
# pkg = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src", "tests"]

[tool.hatch.build.targets.bdist]
include = ["src"]

[dependency-groups]
dev = [
    "bandit==1.*",
    "mypy==1.*",
    "mypy-extensions==1.*",
    "pytest==8.*",
    "pytest-cov==5.*",
    "pytest-mock==3.*",
    "pytest-sugar==1.*",
    "radon==6.*",
    "safety==3.*",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
exclude = ["dist", "sandbox"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E203", "E731",
    "F403", "F405",
    "UP007", "UP045",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "pkg.*"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
strict_equality = true

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|build|dist)/'

[tool.coverage.run]
branch = true
source = ["src/pkg"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = ["tests/*"]
